ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commitly-ingress
  namespace: commitly
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: commitly.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3011
          - path: /
            pathType: Prefix
            frontend:
              service:
                name: frontend
                port:
                  number: 80
